Bug 135789 - Incorrect colors in JPEG (YCCK color space)
Summary: Incorrect colors in JPEG (YCCK color space)
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (show other bugs)
Version: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-10-17 07:41 UTC by Gioele Barabucci
Modified: 2009-11-10 23:58 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments
JPEG image with YCCK color space (441.21 KB, image/jpeg)
2006-10-17 07:42 UTC, Gioele Barabucci
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gioele Barabucci 2006-10-17 07:41:00 UTC
Version:           3.5.5 (using KDE 3.5.5, Gentoo)
Compiler:          Target: powerpc-unknown-linux-gnu
OS:                Linux (ppc) release 2.6.18-gentoo

The attached JPEG image is shown with incorrect colors. For example, the background of the "Beach safety" title in the upper left corner should be dark magenta and not light cian.

This happens on my PowerPC box.

Konqueror, or what does it for it, creates the thumbnail to be shown in the file view with correct colors, but the thumbnail in the tooltip preview has the incorrect colors.
Comment 1 Gioele Barabucci 2006-10-17 07:42:43 UTC
Created attachment 18145 [details]
JPEG image with YCCK color space
Comment 2 Alexandre Racine 2009-01-02 21:05:14 UTC
I have this problem too, but a more recent version of Konqueror.
Here is the JPG http://www.salsamontreal.com/flyers/hamaliandance/20090102-hamaliandance_minicongres2_front.jpg

The image is suppose to have a dominant blue, but in Konqueror it's pink.

KDE Version 	4.1.3 (KDE 4.1.3) (KDE 4.1.3 (KDE 4.1.3), Kubuntu packages)
Application 	Web Browser/File Manager
Operating System 	Linux (x86_64) release 2.6.27-9-generic
Compiler 	cc
Comment 3 David Korth 2009-11-06 04:25:47 UTC
I recently noticed this in a few images on Sonic Retro. Specifically, http://info.sonicretro.org/File:Unleashed_box_wii_us.jpg appears to have swapped red/blue channels when viewed in Konqueror, both within the wiki page and in a separate tab using the "Embeddable Image Viewer". Gwenview and Okular show the image properly.
Comment 4 David Korth 2009-11-06 05:43:04 UTC
Additional note: This is on Konqueror 4.3.3. (It happened in earlier 4.x versions, too. Don't remember if it happened in 3.x.)
Comment 5 Christoph Feck 2009-11-10 23:58:37 UTC
SVN commit 1047308 by cfeck:

Fix loading of CMYK jpeg images

BUG: 135789
BUG: 189414
BUG: 193152


 M  +13 -0     jpegloader.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1047308