Fix loading of CMYK jpeg images

BUG: 135789
BUG: 189414
BUG: 193152

svn path=/trunk/KDE/kdelibs/; revision=1047308